# ids

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Sources/: CMakeLists.txt
Sources/idt/: CMakeLists.txt  idt.cc
Sources/libtool/: CMakeLists.txt  libtool.cc
Tests/: CMakeLists.txt  DefaultDeletedFunctions.hh  FriendDecls.hh  IgnoredFunctions.hh  KnownBuiltins.hh  PureMethods.hh  TemplateFunctions.hh  lit.cfg  lit.site.cfg.in
